--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,13 @@ jobs:
     - name: "Tests"
       script: sbt test
     - stage: release
-      name: "Release to Sonatype"
+      name: "Release to Sonatype and update files"
       env: RELEASE="true"
-      script: sbt ci-release
-    - name: "Update README.md"
-      script: sbt mdoc
-      before_deploy: mv target/mdoc/README.md .
+      script: sbt mdoc ci-release
+      before_deploy: mv target/mdoc/* .
       deploy:
         provider: pages:git
-        commit_message: Upload README.md to latest version
+        commit_message: Update markdown files
         edge: true
         token: $GITHUB_PERSONAL_ACCESS_TOKEN
         target_branch: master
