--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,13 +24,10 @@ jobs:
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-      - run: mv target/mdoc/*.md .
-        name: Move generated markdown files
-      - uses: stefanzweifel/git-auto-commit-action@v2.5.0
-        name: Update markdown files
-        with:
-          branch: master
-          file_pattern: '*.md'
-          commit_message: Update markdown files
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Update markdown files
+        run: |
+          mv target/mdoc/*.md .
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git diff-index --quiet HEAD || git commit -m "Update markdown files" -a
+          git push
