Don't run changelog on every push to master

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,8 +1,14 @@
 name: Update changelog
 
 on:
-  push:
-    branches: master
+  pull_request:
+    types: [closed]
+
+  release:
+    types: [published]
+
+  issues:
+    types: [closed, edited]
 
 jobs:
   changelog:
