Update changelog only on new version

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,14 +1,8 @@
 name: Update changelog
 
 on:
-  pull_request:
-    types: [closed]
-
-  release:
-    types: [published]
-
-  issues:
-    types: [closed, edited]
+  push:
+    tags: v**
 
 jobs:
   changelog:
