--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -7,8 +7,6 @@ on:
 jobs:
   changelog:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v1
         name: Checkout project
@@ -17,8 +15,12 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Update changelog
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git commit -a -m 'Update changelog' || echo "No changes to changelog"
-          git push "https://alejandrohdezma:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:master
+        uses: EndBug/add-and-commit@v2
+        with:
+          author_name: GitHub Action
+          author_email: action@github.com
+          message: "Update changelog"
+          path: "."
+          pattern: "CHANGELOG.md"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
