--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,13 +9,13 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         name: Checkout project
-      - uses: olafurpg/setup-scala@v2
+      - uses: olafurpg/setup-scala@v7
         name: Setup Scala
       - uses: olafurpg/setup-gpg@v2
         name: Setup GPG
-      - run: csbt ci-release
+      - run: sbt ci-release
         name: Release new version
         env:
           RELEASE: true
