--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
+      - name: Fetch tags
+        run: git fetch --tags
       - name: Setup Scala
         uses: olafurpg/setup-scala@v7
       - name: Generate documentation
