Re-order steps name/run

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -8,8 +8,8 @@ jobs:
   changelog:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        name: Checkout project
+      - name: Checkout project
+        uses: actions/checkout@v2
       - name: Fetch tags
         run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Generate changelog
