--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -18,6 +18,12 @@ jobs:
         uses: charmixer/auto-changelog-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Temporarily disable "include administrators" branch protection
+        uses: benjefferies/branch-protection-bot@v1
+        if: always()
+        with:
+          enforce_admins: false
+          access-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Update changelog
         uses: EndBug/add-and-commit@v3
         with:
@@ -28,3 +34,9 @@ jobs:
           pattern: "CHANGELOG.md"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Enable "include administrators" branch protection
+        uses: benjefferies/branch-protection-bot@master
+        if: always()
+        with:
+          enforce_admins: true
+          access-token: ${{ secrets.GITHUB_TOKEN }}
