--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,12 @@ jobs:
         run: sbt mdoc
         env:
           RELEASE: true
+      - name: Temporarily disable "include administrators" branch protection
+        uses: benjefferies/branch-protection-bot@v1
+        if: always()
+        with:
+          enforce_admins: false
+          access-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Update documentation
         uses: EndBug/add-and-commit@v3
         with:
@@ -31,3 +37,9 @@ jobs:
           message: "Update documentation files"
           path: "."
           pattern: "*.md"
+      - name: Enable "include administrators" branch protection
+        uses: benjefferies/branch-protection-bot@master
+        if: always()
+        with:
+          enforce_admins: true
+          access-token: ${{ secrets.GITHUB_TOKEN }}
