Fix branch-protection-bot version

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Temporarily disable "include administrators" branch protection
-        uses: benjefferies/branch-protection-bot@v1
+        uses: benjefferies/branch-protection-bot@1.0.2
         if: always()
         with:
           enforce_admins: false
@@ -35,7 +35,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Enable "include administrators" branch protection
-        uses: benjefferies/branch-protection-bot@master
+        uses: benjefferies/branch-protection-bot@1.0.2
         if: always()
         with:
           enforce_admins: true
