--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Generate documentation
         run: sbt mdoc
         env:
-          RELEASE: true
+          DOWNLOAD_INFO_FROM_GITHUB: true
       - name: Update documentation
         uses: EndBug/add-and-commit@v3
         with:
