--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -18,6 +18,7 @@ jobs:
         uses: charmixer/auto-changelog-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          exclude-labels: duplicate,question,invalid,wontfix,auto-update
       - name: Update changelog
         uses: EndBug/add-and-commit@v3
         with:
