--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,4 +1,9 @@
 pull_request_rules:
+  - name: delete head branch after merge
+    conditions:
+      - merged
+    actions:
+      delete_head_branch: {}
   - name: automatic merge for master when CI passes and at least 1 review
     conditions:
       - "#approved-reviews-by>=1"
