--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: Update documentation and other files
-          title: '[auto] Update documentation and other files'
+          title: 'Update documentation and other files'
           labels: auto-update,documentation
           branch: auto-update-docs
           body: Update documentation and other files with latest changes.
