Remove scala-steward auto-merge and add to changelog.yml

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -28,3 +28,9 @@ jobs:
           labels: auto-update
           branch: auto-update-changelog
           body: Update CHANGELOG.md with information from latest release
+      - name: Merge Pull Request
+        uses: juliangruber/merge-pull-request-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ env.PULL_REQUEST_NUMBER }}
+          method: merge
