--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Checkout project
         uses: actions/checkout@v2
         with:
+          ref: master
           fetch-depth: 0
       - name: Fetch tags
         run: git fetch --tags
