--- a/website/package.json
+++ b/website/package.json
@@ -13,12 +13,14 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.69",
-    "@docusaurus/preset-classic": "2.0.0-alpha.69",
-    "@mdx-js/react": "^1.6.21",
+    "@docusaurus/core": "2.0.0-alpha.73",
+    "@docusaurus/preset-classic": "2.0.0-alpha.73",
+    "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^17.0.2",
+    "@types/react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "@algolia/client-search": "^4.5.1"
   },
   "browserslist": {
     "production": [
